tests/baselines/reference/parser642331.errors.txt
parser642331.ts(2,18): error TS1213: Identifier expected. 'static' is a reserved word in strict mode. Class definitions are automatically in strict mode.


==== parser642331.ts (1 errors) ====
    class test {
        constructor (static) { }
                     ~~~~~~
!!! error TS1213: Identifier expected. 'static' is a reserved word in strict mode. Class definitions are automatically in strict mode.
    }
    